--- a/Ui/WebStore_Study/Views/Account/Login.cshtml
+++ b/Ui/WebStore_Study/Views/Account/Login.cshtml
@@ -12,28 +12,28 @@
                     <h2>Login to your account</h2>
                     <form asp-action="Login" asp-antiforgery="true">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                        
+
                         <div class="form-group">
-                            <input  asp-for="Email" class="form-control" placeholder="Email Address" />
+                            <input asp-for="Email" class="form-control" placeholder="Email Address" />
                             <span asp-validation-for="Email" class="text-danger" />
                         </div>
-                        
+
                         <div class="form-group">
                             <input type="password" asp-for="Password" class="form-control" placeholder="Password" />
                             <span asp-validation-for="Password" class="text-danger" />
                         </div>
-                        
+
                         <div class="form-group">
                             <span>
                                 <input asp-for="RememberMe" type="checkbox" class="checkbox">
                                 <label asp-for="RememberMe"></label>
                             </span>
                         </div>
-                        
+
                         <div class="form-group">
                             <input type="hidden" asp-for="ReturnUrl" />
                         </div>
-                        
+
                         <div class="form-group">
                             <button type="submit" class="btn btn-default">Login</button>
                         </div>
@@ -45,3 +45,7 @@
 
 
 </section><!--/form-->
+@section Scripts
+{
+    <partial name="Partial/_ValidationScriptsPartial" />
+}
