--- a/Ui/WebStore_Study/Views/Account/Register.cshtml
+++ b/Ui/WebStore_Study/Views/Account/Register.cshtml
@@ -50,3 +50,8 @@
         </div>
     </div>
 </section><!--/form-->
+
+@section Scripts
+{
+    <partial name="Partial/_ValidationScriptsPartial"/>
+}
