--- a/Ui/WebStore_Study/Views/Shared/_Layout.cshtml
+++ b/Ui/WebStore_Study/Views/Shared/_Layout.cshtml
@@ -7,13 +7,16 @@
     <meta name="author" content="">
     <title>@ViewBag.Title</title>
 
-    <partial name="Partial/_Styles"/>
-    
- 
+    <partial name="Partial/_Styles" />
+
+
     <!--[if lt IE 9]>
     <script src="~/js/html5shiv.js"></script>
     <script src="~/js/respond.min.js"></script>
     <![endif]-->
+
+    @await RenderSectionAsync("Styles", false)
+
     <link rel="shortcut icon" href="~/images/ico/favicon.ico">
 
 </head><!--/head-->
@@ -25,6 +28,8 @@
 
     <partial name="Partial/_Footer" />
 
-   <partial name="Partial/_Scripts" />
+<partial name="Partial/_Scripts" />
+
+@await RenderSectionAsync("Scripts", false)
 </body>
 </html>
